packages/dartcv/src/calib3d/calib3d.h

// Compute undistorted image points position.
// void cv::undistortImagePoints (InputArray src, OutputArray dst, InputArray cameraMatrix, InputArray distCoeffs, TermCriteria=TermCriteria(TermCriteria::MAX_ITER+TermCriteria::EPS, 5, 0.01));
CvStatus *cv_undistortImagePoints(Mat src, Mat dst, Mat cameraMatrix, Mat distCoeffs, struct TermCriteria criteria,
                                  CvCallback_0 callback);
// Computes the ideal point coordinates from the observed point coordinates.
// void cv::undistortPoints (InputArray src, OutputArray dst, InputArray cameraMatrix, InputArray distCoeffs, InputArray R, InputArray P, TermCriteria criteria);
// void cv::undistortPoints (InputArray src, OutputArray dst, InputArray cameraMatrix, InputArray distCoeffs, InputArray R=noArray(), InputArray P=noArray());
CvStatus *cv_undistortPoints(
    Mat distorted,
    Mat undistorted,
    Mat k,
    Mat d,
    Mat r,
    Mat p,
    TermCriteria criteria,
    CvCallback_0 callback
);
// validates disparity using the left-right check. The matrix "cost" should be computed by the stereo correspondence algorithm
// void cv::validateDisparity (InputOutputArray disparity, InputArray cost, int minDisparity, int numberOfDisparities, int disp12MaxDisp=1);
CvStatus *cv_validateDisparity(Mat disparity, Mat cost, int minDisparity, int numberOfDisparities, int disp12MaxDisp,
                               CvCallback_0 callback);