packages/dartcv/lib/src/g/calib3d.g.dart


  late final _cv_undistortImagePointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, imp1.TermCriteria,
              imp1.CvCallback_0)>>('cv_undistortImagePoints');
  late final _cv_undistortImagePoints = _cv_undistortImagePointsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, Mat, imp1.TermCriteria, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_undistortPoints(
    Mat distorted,
    Mat undistorted,
    Mat k,
    Mat d,
    Mat r,
    Mat p,
    TermCriteria criteria,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_undistortPoints(
      distorted,
      undistorted,
      k,
      d,
      r,
      p,
      criteria,
      callback,
    );
  }

  late final _cv_undistortPointsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, Mat, Mat,
              TermCriteria, imp1.CvCallback_0)>>('cv_undistortPoints');
  late final _cv_undistortPoints = _cv_undistortPointsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, Mat, Mat, Mat, TermCriteria, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_validateDisparity(
    Mat disparity,
    Mat cost,
    int minDisparity,
    int numberOfDisparities,
    int disp12MaxDisp,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_validateDisparity(
      disparity,
      cost,
      minDisparity,
      numberOfDisparities,
      disp12MaxDisp,
      callback,
    );
  }

  late final _cv_validateDisparityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_0)>>('cv_validateDisparity');
  late final _cv_validateDisparity = _cv_validateDisparityPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, int, int, int, imp1.CvCallback_0)>();
}

typedef CvPoint2d = imp1.CvPoint2d;
typedef CvRect = imp1.CvRect;
typedef CvSize = imp1.CvSize;
typedef CvStatus = imp1.CvStatus;
typedef Mat = imp1.Mat;
typedef Scalar = imp1.Scalar;
typedef TermCriteria = imp1.TermCriteria;
typedef UsacParams = imp1.UsacParams;
typedef Vec3d = imp1.Vec3d;
typedef VecMat = imp1.VecMat;
typedef VecPoint2f = imp1.VecPoint2f;
typedef VecVecPoint2f = imp1.VecVecPoint2f;
typedef VecVecPoint3f = imp1.VecVecPoint3f;
